finally a functional calculator / no more -m

--- a/Ongoing/Other projects/codepen-calculator.html
+++ b/Ongoing/Other projects/codepen-calculator.html
@@ -105,10 +105,11 @@
 </style>
 <script>
     //plans 
-    //1st:
+    //1st:Done
     //split from / * - + and then calc accordingly
-    //1.5th:
+    //1.5th: Halfway done
     //calc dots as well -turns out, I DONT NEED TO // TURNS OUT I NEED TO PREVENT MULTIPLE DOTS
+    //also /0 ?
     //2nd:
     //display previous calculations stacked on top of each other
     //3rd
