added DONE for the 2nd part

--- a/Ongoing/Other projects/codepen-calculator.html
+++ b/Ongoing/Other projects/codepen-calculator.html
@@ -148,7 +148,7 @@
     //1.5th: done
     //calc dots as well -turns out, I DONT NEED TO // TURNS OUT I NEED TO PREVENT MULTIPLE DOTS
     //1.7th /0 (done) is equal to 0 DONT JUDGE ME
-    //2nd:
+    //2nd:DONE
     //display previous calculations stacked on top of each other
     //3rd
     //add further calculation tools
