stating an idle game, hope it goes well

--- a/Ongoing/Other projects/codepen-calculator.html
+++ b/Ongoing/Other projects/codepen-calculator.html
@@ -154,7 +154,7 @@
     //add AC
     //2.7th: DONE
     //and reset with completion (on "=" enter) // ONLY WHEN THE NEXT ONE ISNT AN OPERATOR
-    //3rd
+    //3rd : Temporarily cancelled
     //add further calculation tools
     let displayBottom = document.getElementById("display-bottom");
     let displayMid = document.getElementById("display-mid");
