--- a/Ongoing/Games/idle-game.html
+++ b/Ongoing/Games/idle-game.html
@@ -4,30 +4,91 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
     </head>
-    <body>
-        <script src="idle-script.js"></script>
-        <script src="function-pack.js"></script>
-        
+    <body onload="onLoad()">
+
         <div class="left">
             <div id="upgrades-shop" class="upgrades-shop">
-                <div onclick="openUpgrades()" class="upgrades-title"></div>
+                <div id="upgrades-title" onclick="openUpgrades()" class="upgrades-title">
+                    <span>Upgrades Shop</span>
+                    <span id="pos-txt" style="position: absolute;left: 20px;font-weight: 900;font-size: x-large;">&#8896;</span>
+                </div>
             </div>
         </div>
         <div class="mid">
 
         </div>
         <div class="right">
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
-            <div class="shop-item">a</div>
+            <div class="shop-title">
+                Shop
+                <div class="toggle-body">
+                    Buy or Sell:
+                    <input type="radio" name="buy-or-sell" id="tobuy" value="true" checked="checked">
+                    <label class="main-toggle" for="tobuy">Buy</label>
+                    <input type="radio" name="buy-or-sell" id="tosell" value="false">
+                    <label class="main-toggle" for="tosell">Sell</label>
+                    <div class="toggle">
+                        <div id="buy-radio" class="buy-radio" >
+                            <label for="buy_one" class="radio-box ">
+                                <input type="radio" name="buy" id="buy_one" value="1" checked="checked">
+                                <span>Buy 1</span>
+                                <div class="checked"></div>
+                            </label>
+                            <label for="buy_ten" class="radio-box">
+                                <input type="radio" name="buy" id="buy_ten" value="10">
+                                <span>Buy 10</span>
+                                <div class="checked"></div>
+                            </label>
+                            <label for="buy_hundred" class="radio-box">
+                                <input type="radio" name="buy" id="buy_hundred" value="100">
+                                <span>Buy 100</span>
+                                <div class="checked"></div>
+                            </label for="buy_max">
+                            <label class="radio-box">
+                                <input type="radio" name="buy" id="buy_max" value="999">
+                                <span>Buy Max</span>
+                                <div class="checked"></div>
+                            </label>
+                        </div>
+
+                        <div id="sell-radio" class="sell-radio">
+                            <label for="sell_one" class="radio-box">
+                                <input type="radio" name="sell" id="sell_one" value="-1">
+                                <span>Sell 1</span>
+                                <div class="checked"></div>
+                            </label>
+                            <label for="sell_ten" class="radio-box">
+                                <input type="radio" name="sell" id="sell_ten" value="-10">
+                                <span>Sell 10</span>
+                                <div class="checked"></div>
+                            </label>
+                            <label for="sell_hundred" class="radio-box">
+                                <input type="radio" name="sell" id="sell_hundred" value="-100">
+                                <span>Sell 100</span>
+                                <div class="checked"></div>
+                            </label for="sell_all">
+                            <label class="radio-box">
+                                <input type="radio" name="sell" id="sell_all" value="-999">
+                                <span>Sell All</span>
+                                <div class="checked"></div>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="shop-body">
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+                <div class="shop-item">a</div>
+            </div>
+
 
         </div>
 
@@ -36,11 +97,78 @@
 
 
 
-
+        <script src="idle-script.js"></script>
+        <script src="function-pack.js"></script>
+        <script src="html-functions.js"></script>
     </body>
 
 </html>
 <style>
+    input:checked + .main-toggle{
+        background-color: rgba(165, 42, 42, 0.3);
+        border-width: 3px 3px 0 3px;
+        border-color: black;
+        border-style: solid;
+    }
+    .main-toggle{
+        padding-left: 5px;
+        padding: 5px;
+        padding-top: 0;
+        padding-bottom: 0;
+        cursor: pointer;
+    }
+    .checked{
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(255, 255, 255,0.3);
+        display: none;
+    }
+    input:checked ~ .checked{
+        display: flex;
+    }
+    .radio-box {
+        position: relative;
+        cursor: pointer;
+        padding-left: 5px;
+        padding-right: 5px;
+        flex: 1;
+        user-select: none;
+        background-color: rgba(255, 209, 4, 0.4);
+        transition: all cubic-bezier(0.46,0.03,0.52,0.96) 0.2s;
+    }
+    .radio-box:hover{
+        background-color: rgba(255, 209, 4, 0.1);
+    }
+    .radio-box:active{
+        background-color: rgba(255, 209, 4, 0.1);
+    }
+
+    .radio-box label {
+        opacity: 1;
+        cursor: pointer;
+        filter: opacity(100%);
+    }
+
+    input,label{
+        margin: 0;
+    }
+    label {
+        z-index: 2;
+    }
+    input{
+        width: 0;
+        height: 0;
+        visibility: hidden;
+    }
+    .buy-radio,.sell-radio{
+        display: flex;
+
+        align-items: center;
+    }
     body{
         display: grid;
         grid-template-columns: repeat(30, 1fr);
@@ -65,12 +193,17 @@
         transition: cubic-bezier(0.46,0.03,0.52,0.96) bottom 0.7s;
     }
     .upgrades-title{
-        position: sticky;
+        position: absolute;
         top: 0%;
         height: 2em;
         background-color: chocolate;
         width: 100%;
         cursor: pointer;
+        box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.2), 0px 5px 5px rgba(0, 0, 0, 0.3);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .mid{
         min-height: 30em;
@@ -89,20 +222,56 @@
         filter: opacity(80%) brightness(120%);
         grid-column-start: 22;
         grid-column-end: 31;
-        min-height: 10em;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .shop-title{
+        height: 6em;
+        background-color: chocolate;
+        box-shadow: 0px 10px 5px rgb(65, 28, 2), inset -2px -4px 5px rgb(121, 56, 10), inset 4px 0 5px rgb(228, 144, 85);
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .shop-title > .toggle-body{
+
+    }
+    .toggle-body > .toggle {
+        background-image: linear-gradient(-60deg, rgb(221, 159, 44) 0%, rgb(90, 46, 21) 100%);
+        
+        width: 24em;
+        border: solid black 3px;
+    }
+    .shop-body{
         display: flex;
         align-items: center;
         flex-direction: column;
         overflow-y: scroll;
-        max-height: 100vh;
+        max-height: calc(100vh - 6em);
     }
     .shop-item{
         width: 80%;
         border-radius: 1.5em;
-        min-height: 6em;
+        min-height: clamp(3em, 15vh, 4.5em);
         background-color: blanchedalmond;
         filter: opacity(80%);
-        border: 0.2em black solid;
+        border: 0.15em black solid;
+        box-shadow: 10px 10px 5px black;
         margin: 15px;
+        display: flex;
+        align-items: center;
+        font-size: 1.4em;
+    }
+    .shop-item > .buy-button {
+
+    }
+    .shop-item > img {
+        height: 80%;
+        aspect-ratio: 1/1;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .sell-radio {
+        display: none;
     }
 </style>
