--- a/Ongoing/Codepen/codepen-sliders.html
+++ b/Ongoing/Codepen/codepen-sliders.html
@@ -20,7 +20,7 @@
 
             </div>
             <div id="slide-4" class="slider-base">
-                <span id="disp" class="display visible">0</span>
+                <span id="disp" class="display">0</span>
                 <input id="range-4" type="range" min="0" max="100" value="50">
             </div>
 
@@ -38,6 +38,7 @@
         margin: 0;
         width: 100%;
         height: 100%;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -86,7 +87,7 @@
         background-color: rgb(255, 125, 88);
         z-index: 0;
     }
-    .display.visible {
+    .display {
         transform-origin: center center;
         position: absolute;
         top: -130%;
@@ -94,13 +95,15 @@
         color: rgb(0, 0, 0);
         height: 25px;
         width: 55px;
-        padding-top: 15px;
-        padding-bottom: 15px;
+        padding-top: 10px;
+        padding-bottom: 20px;
         font-size: 25px;
         border-radius: 50%;
         border: black 2px solid;
         text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
+
     #slide-1 {
         background-color: rgb(255, 255, 255);
     }
@@ -112,7 +115,8 @@
         position: relative;
     }
     #slide-4 {
-        background-color: rgb(255, 255, 0);
+        background-color: rgb(255, 255, 255);
+        position: relative
     }
     #range-2 {
         --c: ;  
@@ -202,6 +206,25 @@
         --w:30px;
         height: var(--w);
         width: var(--w);
+        border-radius: 50%;
+        border: none;
+        box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+        outline: none;
+    }
+    #slide-4 > input::-moz-range-track{
+        --w:30px;
+        height: var(--w);
+        border-radius: 15px;
+        background-color: gray;
+        z-index: 0;
+    }
+    #slide-4 > input::-moz-range-progress {
+        --w:30px;
+        height: var(--w);
+        border-radius: 15px;
+        background-color: rgb(0, 103, 221);
+        box-shadow: inset -5px 10px 5px rgba(0, 0, 0, 0.2),inset 0 0 10px 5px rgba(255, 255, 255, 0.2);
+        position: absolute;
     }
 
 </style>
@@ -212,6 +235,7 @@
     const ctr = document.getElementById("ft")
     const dsp = document.getElementById("disp")
     const r4 = document.getElementById("range-4")
+    const f = document.getElementById("filler")
 
     function onload(){
         r2.addEventListener("input", setColor)
@@ -225,9 +249,10 @@
 
 
     function maintainPosition(){
-        val = Math.floor(r4.value / r4.max * r4.clientWidth - 30)
-        dsp.style.left = val + "px"
-        dsp.innerHTML = val + "%"
+        pos = Math.round(r4.value / r4.max * 100)
+        rpos = Math.round(r4.value / r4.max * 90 - 3)
+        dsp.innerHTML = pos
+        dsp.style.left = (rpos) + "%"
     }
     function updateCenter(){
         v1 = Math.floor(t1.value / t1.max * 98)
@@ -281,8 +306,5 @@
             output += preput[i].toString(16) == 0 ? "00": preput[i].toString(16);
         }
         return output
-    }
-    function multipleSliders(){
-        //first determine which one is
     }
 </script>
